--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,9 @@
    max-width: 1280px;
    margin: 0 auto;
    padding: 2rem;
-   text-align: center;
 }
 .header {
-   font-size: large;
-   font-weight: bold;
-   color: aliceblue;
+   font-size: 40px;
+   font-weight: 700;
+
 }
